fix(complete): Give crates more specific names
`clap_generate` originally intended to be "generate anything".  With
`fig`, we already broke one part out.  With #3174's man support, we are
also looking at keeping it separate:
- More freedom to iterate on the API
- Uniqueness (and potential weight) of its dependencies
- man generation is normally more for distribution while completions are
  a mix of being distributed with the app or the app generating the
  completions (which will be exacerbated if we move most completion
  parsing logic to be in Rust)

So `clap_generate` is having a lot more limited of a role than the
original name conveys.   I worry the generic name will be a hindrance to
people discovering and using it (yes, documentation can help but there
are limits).

I hesitated because we are on the verge of releasing 3.0. However, doing
it even later will be even more disruptive because more people will be
using it (crates.io lists ~70 people using `clap_generate`).

To ease things, we are still releasing `clap_generate` as a wrapper
around `clap_complete`.

--- a/clap_generate/Cargo.toml
+++ b/clap_generate/Cargo.toml
@@ -8,7 +8,7 @@ include = [
 	"LICENSE-*",
 	"README.md"
 ]
-description = "A generator library used with clap for shell completion scripts, manpage, etc."
+description = "Renamed to clap_complete"
 repository = "https://github.com/clap-rs/clap/tree/master/clap_generate"
 documentation = "https://docs.rs/clap_generate"
 keywords = [
@@ -22,24 +22,10 @@ categories = ["command-line-interface"]
 license = "MIT OR Apache-2.0"
 readme = "README.md"
 
-[package.metadata.release]
-pre-release-replacements = [
-  {file="README.md", search="github.com/clap-rs/clap/blob/[^/]+/", replace="github.com/clap-rs/clap/blob/{{tag_name}}/", exactly=4, prerelease = true},
-]
-
-[lib]
-bench = false
-
 [dependencies]
 clap = { path = "../", version = "=3.0.0-rc.11", default-features = false, features = ["std"] }
-
-[dev-dependencies]
-pretty_assertions = "1.0"
-clap = { path = "../", version = "=3.0.0-rc.11", default-features = false, features = ["std", "derive"] }
+clap_complete = { path = "../clap_complete", version = "=3.0.0-rc.11" }
 
 [features]
 default = []
-debug = ["clap/debug"]
-
-[package.metadata.docs.rs]
-targets = ["x86_64-unknown-linux-gnu"]
+debug = ["clap_complete/debug"]
