chore: Share a tag between clap / clap_derive

--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -24,7 +24,7 @@ readme = "README.md"
 
 [package.metadata.release]
 shared-version = true
-tag = false
+tag-name = "v{{version}}"
 
 [lib]
 proc-macro = true
