--- a/Cargo.toml
+++ b/Cargo.toml
@@ -44,6 +44,7 @@ features = ["unstable-doc"]
 
 [package.metadata.release]
 shared-version = true
+tag-name = "v{{version}}"
 pre-release-replacements = [
   {file="CHANGELOG.md", search="Unreleased", replace="{{version}}", min=1},
   {file="CHANGELOG.md", search="\\.\\.\\.HEAD", replace="...{{tag_name}}", exactly=1},
