--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -25,6 +25,9 @@ readme = "README.md"
 [package.metadata.release]
 shared-version = true
 tag-name = "v{{version}}"
+pre-release-replacements = [
+  {file="README.md", search="github.com/clap-rs/clap/blob/[^/]+/", replace="github.com/clap-rs/clap/blob/{{tag_name}}/", exactly=2, prerelease = true},
+]
 
 [lib]
 proc-macro = true
