--- a/clap_mangen/Cargo.toml
+++ b/clap_mangen/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "clap_man"
+name = "clap_mangen"
 version = "0.1.0"
 edition = "2018"
 include = [
@@ -9,8 +9,8 @@ include = [
 	"README.md"
 ]
 description = "A manpage generator for clap"
-repository = "https://github.com/clap-rs/clap/tree/master/clap_man"
-documentation = "https://docs.rs/clap_man"
+repository = "https://github.com/clap-rs/clap/tree/master/clap_mangen"
+documentation = "https://docs.rs/clap_mangen"
 keywords = [
 	"clap",
 	"cli",
