--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -39,6 +39,7 @@ clap = { path = "../", version = "3.1.0", default-features = false, features = [
 
 [dev-dependencies]
 pretty_assertions = "1.0"
+snapbox = { version = "0.2", features = ["diff"] }
 clap = { path = "../", version = "3.1.0", default-features = false, features = ["std", "derive"] }
 
 [features]
