--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 members = [
 	"clap_derive",
+	"clap_lex",
 	"clap_complete",
 	"clap_complete_fig",
 	"clap_mangen",
@@ -118,11 +119,11 @@ path = "benches/06_rustup.rs"
 
 [dependencies]
 clap_derive = { path = "./clap_derive", version = "3.1.7", optional = true }
+clap_lex = { path = "./clap_lex", version = "0.1.0" }
 bitflags = "1.2"
 textwrap = { version = "0.15.0", default-features = false, features = [] }
 unicase = { version = "2.6", optional = true }
 indexmap = "1.0"
-os_str_bytes = "6.0"
 strsim = { version = "0.10",  optional = true }
 yaml-rust = { version = "0.4.1",  optional = true }
 atty = { version = "0.2",  optional = true }
