--- a/Cargo.toml
+++ b/Cargo.toml
@@ -118,7 +118,7 @@ name = "06_rustup"
 path = "benches/06_rustup.rs"
 
 [dependencies]
-clap_derive = { path = "./clap_derive", version = "3.1.7", optional = true }
+clap_derive = { path = "./clap_derive", version = "=3.1.7", optional = true }
 clap_lex = { path = "./clap_lex", version = "0.1.0" }
 bitflags = "1.2"
 textwrap = { version = "0.15.0", default-features = false, features = [] }
