--- a/clap_lex/Cargo.toml
+++ b/clap_lex/Cargo.toml
@@ -36,4 +36,4 @@ pre-release-replacements = [
 bench = false
 
 [dependencies]
-os_str_bytes = "6.0"
+os_str_bytes = { version = "6.0", default-features = false, features = ["raw_os_str"] }
