--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,7 +82,8 @@ unicode = ["textwrap/unicode-width", "unicase"]  # Support for unicode character
 unstable-replace = []
 unstable-multicall = []
 unstable-grouped = []
-unstable-v4 = []
+# note: this will always enable clap_derive, change this to `clap_derive?/unstable-v4` when MSRV is bigger than 1.60
+unstable-v4 = ["clap_derive/unstable-v4"]
 
 [lib]
 bench = false
