--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -51,4 +51,5 @@ proc-macro-error = "1"
 [features]
 default = []
 debug = []
-unstable-v4 = []
+unstable-v4 = ["unstable-array"]
+unstable-array = []
