test(complete): Option to verify examples

--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -40,6 +40,8 @@ clap = { path = "../", version = "3.1.10", default-features = false, features = 
 [dev-dependencies]
 pretty_assertions = "1.0"
 snapbox = { version = "0.2", features = ["diff"] }
+# Cutting out `filesystem` feature
+trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }
 clap = { path = "../", version = "3.1.10", default-features = false, features = ["std", "derive"] }
 
 [features]
