refactor(test): Use snapbox's diffs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -142,6 +142,7 @@ rustversion = "1"
 # Cutting out `filesystem` feature
 trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }
 humantime = "2"
+snapbox = "0.2.9"
 
 [[example]]
 name = "demo"
