--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -1,16 +1,10 @@
+cargo-features = ["workspace-inheritance"]
+
 [package]
 name = "clap_complete"
 version = "3.1.4"
-edition = "2018"
-include = [
-  "build.rs",
-  "src/**/*",
-  "Cargo.toml",
-  "LICENSE*",
-  "README.md",
-  "benches/**/*",
-  "examples/**/*"
-]
+edition.workspace = true
+include.workspace = true
 description = "Generate shell completion scripts for your clap::Command"
 repository = "https://github.com/clap-rs/clap/tree/master/clap_complete"
 documentation = "https://docs.rs/clap_complete"
@@ -21,7 +15,7 @@ keywords = [
 	"bash",
 ]
 categories = ["command-line-interface"]
-license = "MIT OR Apache-2.0"
+license.workspace = true
 readme = "README.md"
 
 [package.metadata.release]
@@ -41,16 +35,16 @@ bench = false
 clap = { path = "../", version = "3.1.10", default-features = false, features = ["std"] }
 clap_lex = { path = "../clap_lex", version = "0.2.0", optional = true }
 is_executable = { version = "1.0.1", optional = true }
-os_str_bytes = { version = "6.0", default-features = false, features = ["raw_os_str"], optional = true }
+os_str_bytes = { workspace = true, optional = true }
 pathdiff = { version = "0.2.1", optional = true }
-shlex = { version = "1.1.0", optional = true }
+shlex = { workspace = true, optional = true }
 unicode-xid = { version = "0.2.2", optional = true }
 
 [dev-dependencies]
 pretty_assertions = "1.0"
-snapbox = { version = "0.2", features = ["diff"] }
+snapbox = { workspace = true, features = ["diff"] }
 # Cutting out `filesystem` feature
-trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }
+trycmd.workspace = true
 clap = { path = "../", version = "3.1.10", default-features = false, features = ["std", "derive"] }
 
 [[example]]
