--- a/clap_complete_fig/Cargo.toml
+++ b/clap_complete_fig/Cargo.toml
@@ -1,13 +1,10 @@
+cargo-features = ["workspace-inheritance"]
+
 [package]
 name = "clap_complete_fig"
 version = "3.1.5"
-edition = "2018"
-include = [
-	"src/**/*",
-	"Cargo.toml",
-	"LICENSE-*",
-	"README.md"
-]
+edition.workspace = true
+include.workspace = true
 description = "A generator library used with clap for Fig completion scripts"
 repository = "https://github.com/clap-rs/clap/tree/master/clap_complete_fig"
 documentation = "https://docs.rs/clap_complete_fig"
@@ -19,7 +16,7 @@ keywords = [
 	"fig",
 ]
 categories = ["command-line-interface"]
-license = "MIT OR Apache-2.0"
+license.workspace = true
 readme = "README.md"
 
 [package.metadata.docs.rs]
@@ -42,4 +39,4 @@ clap = { path = "../", version = "3.1.10", default-features = false, features = 
 clap_complete = { path = "../clap_complete", version = "3.1.2" }
 
 [dev-dependencies]
-snapbox = { version = "0.2", features = ["diff"] }
+snapbox = { workspace = true, features = ["diff"] }
