--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -1,13 +1,10 @@
+cargo-features = ["workspace-inheritance"]
+
 [package]
 name = "clap_derive"
-version = "3.1.18"
-edition = "2018"
-include = [
-	"src/**/*",
-	"Cargo.toml",
-	"LICENSE-*",
-	"README.md"
-]
+version.workspace = true
+edition.workspace = true
+include.workspace = true
 description = "Parse command line argument by defining a struct, derive crate."
 repository = "https://github.com/clap-rs/clap/tree/master/clap_derive"
 documentation = "https://docs.rs/clap_derive"
@@ -19,7 +16,7 @@ keywords = [
 	"proc_macro"
 ]
 categories = ["command-line-interface", "development-tools::procedural-macro-helpers"]
-license = "MIT OR Apache-2.0"
+license.workspace = true
 readme = "README.md"
 
 [package.metadata.release]
