--- a/clap_complete_fig/Cargo.toml
+++ b/clap_complete_fig/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "clap_complete_fig"
 version = "3.1.5"
+rust-version = "1.56.0"  # MSRV
 edition = "2018"
 include = [
 	"src/**/*",
