--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,6 @@
 [workspace]
 members = [
+  "clap_bench",
   "clap_derive",
   "clap_lex",
   "clap_complete",
@@ -88,36 +89,6 @@ unstable-v4 = ["clap_derive/unstable-v4"]
 [lib]
 bench = false
 
-[[bench]]
-harness = false
-name = "01_default"
-path = "benches/01_default.rs"
-
-[[bench]]
-harness = false
-name = "02_simple"
-path = "benches/02_simple.rs"
-
-[[bench]]
-harness = false
-name = "03_complex"
-path = "benches/03_complex.rs"
-
-[[bench]]
-harness = false
-name = "04_new_help"
-path = "benches/04_new_help.rs"
-
-[[bench]]
-harness = false
-name = "05_ripgrep"
-path = "benches/05_ripgrep.rs"
-
-[[bench]]
-harness = false
-name = "06_rustup"
-path = "benches/06_rustup.rs"
-
 [dependencies]
 clap_derive = { path = "./clap_derive", version = "=3.1.18", optional = true }
 clap_lex = { path = "./clap_lex", version = "0.2.0" }
@@ -136,8 +107,6 @@ backtrace = { version = "0.3", optional = true }
 
 [dev-dependencies]
 regex = "1.0"
-lazy_static = "1"
-criterion = "0.3.2"
 trybuild = "1.0.18"
 rustversion = "1"
 # Cutting out `filesystem` feature
