--- a/clap_derive/Cargo.toml
+++ b/clap_derive/Cargo.toml
@@ -51,4 +51,6 @@ proc-macro-error = "1"
 [features]
 default = []
 debug = []
-unstable-v4 = []
+unstable-v4 = ["deprecated"]
+deprecated = []
+raw-deprecated = ["deprecated"]
