test: Verify auto-traits for core types
By checking these types, we'll get some other types for free, like
`Command` verifying `Arg`.

This was inspired by #3876

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -114,6 +114,7 @@ trycmd = { version = "0.13", default-features = false, features = ["color-auto",
 humantime = "2"
 snapbox = "0.2.9"
 shlex = "1.1.0"
+static_assertions = "1.1.0"
 
 [[example]]
 name = "demo"
