--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ description = """
 A simple to use, efficient, and full-featured Command Line Argument Parser
 """
 edition = "2018"
+rust-version = "1.46.0"  # MSRV
 
 [badges]
 travis-ci = { repository = "clap-rs/clap" }
