chore(gh): Prepare for more branches to be added

--- a/.github/settings.yml
+++ b/.github/settings.yml
@@ -108,3 +108,13 @@ branches:
         contexts: ["CI", "Lint Commits", "Spell Check with Typos"]
       enforce_admins: false
       restrictions: null
+  - name: v2-master
+    protection:
+      required_pull_request_reviews: null
+      required_conversation_resolution: true
+      required_status_checks:
+        # Required. Require branches to be up to date before merging.
+        strict: false
+        contexts: ["CI", "Lint Commits", "Spell Check with Typos"]
+      enforce_admins: false
+      restrictions: null
