--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,7 +2,7 @@ name: CI
 on:
   pull_request:
   push:
-    branches: [master]
+    branches: ["*master"]
   schedule:
   - cron: '3 3 3 * *'
 permissions:
