--- a/.github/workflows/pre-commit.yml
+++ b/.github/workflows/pre-commit.yml
@@ -2,7 +2,7 @@ name: pre-commit
 on:
   pull_request:
   push:
-    branches: [master]
+    branches: ["*master"]
 jobs:
   pre-commit:
     runs-on: ubuntu-latest
