--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,7 +10,7 @@ members = [
 
 [package]
 name = "clap"
-version = "3.2.14"
+version = "4.0.0-alpha.0"
 description = "A simple to use, efficient, and full-featured Command Line Argument Parser"
 repository = "https://github.com/clap-rs/clap"
 categories = ["command-line-interface"]
@@ -86,7 +86,7 @@ unstable-v5 = ["clap_derive/unstable-v5", "deprecated"]
 bench = false
 
 [dependencies]
-clap_derive = { path = "./clap_derive", version = "=3.2.7", optional = true }
+clap_derive = { path = "./clap_derive", version = "=4.0.0-alpha.0", optional = true }
 clap_lex = { path = "./clap_lex", version = "0.2.2" }
 bitflags = "1.2"
 textwrap = { version = "0.15.0", default-features = false, features = [] }
