chore(ci): Lock docs to MSRV
This will help avoid issues with new warnings

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -137,7 +137,7 @@ jobs:
     - name: Install Rust
       uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
+        toolchain: 1.56.1  # MSRV
         profile: minimal
         override: true
     - uses: Swatinem/rust-cache@v1
