fix(help): Collapse usage to one line
After looking at more examples, I've become more attached to this
briefer format.

Part of #4132

--- a/tests/ui/arg_required_else_help_stderr.toml
+++ b/tests/ui/arg_required_else_help_stderr.toml
@@ -3,8 +3,7 @@ args = []
 status.code = 2
 stdout = ""
 stderr = """
-Usage:
-    stdio-fixture[EXE] [OPTIONS] [COMMAND]
+Usage: stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
 Commands:
     more    
