--- a/tests/ui/error_stderr.toml
+++ b/tests/ui/error_stderr.toml
@@ -7,8 +7,7 @@ error: Found argument '--unknown-argument' which wasn't expected, or isn't valid
 
     If you tried to supply `--unknown-argument` as a value rather than a flag, use `-- --unknown-argument`
 
-Usage:
-    stdio-fixture[EXE] [OPTIONS] [COMMAND]
+Usage: stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
 For more information try --help
 """
