fix(parser): Quote the suggested help
We do it elsewhere but here it is only distinguished coloring.

Inspired by #4218

--- a/tests/ui/error_stderr.toml
+++ b/tests/ui/error_stderr.toml
@@ -9,5 +9,5 @@ error: Found argument '--unknown-argument' which wasn't expected, or isn't valid
 
 Usage: stdio-fixture[EXE] [OPTIONS] [COMMAND]
 
-For more information try --help
+For more information try '--help'
 """
