Revert "fix: Remove once_cell dependency from derive"
This reverts commit 429143af4299327a816b9d50e13a4cfc3ba247a7.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -69,7 +69,7 @@ suggestions = ["dep:strsim"]
 
 # Optional
 deprecated = ["clap_derive?/deprecated"] # Guided experience to prepare for next breaking release (at different stages of development, this may become default)
-derive = ["clap_derive"]
+derive = ["clap_derive", "dep:once_cell"]
 cargo = ["dep:once_cell"] # Disable if you're not using Cargo, enables Cargo-env-var-dependent macros
 wrap_help = ["dep:terminal_size"]
 env = [] # Use environment variables during arg parsing
