--- a/clap_complete/Cargo.toml
+++ b/clap_complete/Cargo.toml
@@ -52,7 +52,7 @@ unicode-xid = { version = "0.2.2", optional = true }
 snapbox = { version = "0.3", features = ["diff"] }
 # Cutting out `filesystem` feature
 trycmd = { version = "0.13", default-features = false, features = ["color-auto", "diff", "examples"] }
-clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std", "derive"] }
+clap = { path = "../", version = "4.0.0-alpha.0", default-features = false, features = ["std", "derive", "help"] }
 
 [[example]]
 name = "dynamic"
