chore: add sub_subcommands example and nu script to generate readme dynamically

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,7 +15,10 @@ keywords = [
   "completion",
   "nushell"
 ]
-exclude = [ "tests/*" ]
+exclude = [
+ "tests/*",
+ "scripts/*"
+]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
