chore(ci): Force setting of toolchain target

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,6 +109,8 @@ jobs:
       - uses: Swatinem/rust-cache@v2
       - name: Check
         run: make check-${{ matrix.features }}
+        env:
+          TOOLCHAIN_TARGET: ${{ matrix.target }}
   ui:
     name: UI Tests
     runs-on: ubuntu-latest
