chore(pre): Mirror exclude in pre-commit

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -1,3 +1,8 @@
+exclude: |
+  (?x)^(
+    tests/.*|
+    CHANGELOG.md
+  )$
 repos:
   - repo: https://github.com/pre-commit/pre-commit-hooks
     rev: v4.3.0
