chore(ci): Update stabilidyDays to new syntax

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -33,7 +33,7 @@
       matchPackageNames: [
         'rust',
       ],
-      stabilityDays: 126,  // 3 releases * 6 weeks per release * 7 days per week
+      stabilityDays: "126 days",  // 3 releases * 6 weeks per release * 7 days per week
     },
     // Goals:
     // - Keep version reqs low, ignoring compatible normal/build dependencies
