chore(ci): Ban for_each

--- a/.clippy.toml
+++ b/.clippy.toml
@@ -9,4 +9,6 @@ disallowed-methods = [
     { path = "std::option::Option::map_or_else", reason = "use `map(..).unwrap_or_else(..)`" },
     { path = "std::result::Result::map_or", reason = "use `map(..).unwrap_or(..)`" },
     { path = "std::result::Result::map_or_else", reason = "use `map(..).unwrap_or_else(..)`" },
+    { path = "std::iter::Iterator::for_each", reason = "prefer `for` for side-effects" },
+    { path = "std::iter::Iterator::try_for_each", reason = "prefer `for` for side-effects" },
 ]
